<?xml version="1.0"?>
<package>
  <name>camera_robot</name>
  <version>1.0.0</version>
  <description>Node to broadcast tf2_ros transform</description>

  <maintainer email="mickael.trezzy@gmail.com">Mickaël</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>

  </export>
</package>